# metatree-live

./: .gitignore  README.md  pyproject.toml  sync.sh
docker/: .env  KEYCLOAK_UPGRADE_GUIDE.md  README.md  docker-compose.yml  export_keycloak_users.sh  export_users.sh  fairspace.conf  import_users.sh  keycloak-docker-compose.yml  keycloak.conf  ssl-proxy-docker-compose.yml  start_all.sh  stop_all.sh  views.yaml  vocabulary.ttl
docker/kcupgrade/: DEBUG_GUIDE.md  README.md  import_users.sh  keycloak_user_export_guide.md  keycloak_users_import_formatted.json
docker/keycloak/: init-realm.sh  realm-template.json
init/: .env  Metatree_functions_common.py  apparatus.ttl  assay_types.ttl  extra_plant_species.ttl  growth_facilities.ttl  initialize_db.py  metatree_common.py  other_species.ttl  plant_growth_medium.ttl  plant_species.ttl  plant_states_stages.ttl  ploidy.ttl  treatments.ttl
uploading_data/: PPH_example.xlsx
