[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosystemsdatanaalysis"
version = "0.1.0"
description = "Biosystems data analysis tools for Metatree"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "urllib3>=1.26.0",
    "typed-argument-parser>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["init"]
